Update webpage content

--- a/index.html
+++ b/index.html
@@ -36,20 +36,15 @@
         <div
             class="hero-overlay white-overlay c-card-hero l-flex l-flex-col l-justify-center l-align-center l-p text-center  l-m">
             <h1 class="l-mt-1 u-heading u-hero-headline">Welcome To Outback Nursery</h1>
-            <div class="hero-container l-flex l-flex-col l-justify-center l-align-centertext-center l-mt-1">
-                <p class="hero-p u-body-text l-flex l-align-center">Lorem ipsum dolor sit amet, consectetur adipiscing
-                    elit, sed do eiusmod tempor
-                    incididunt
-                    ut labore et dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea
-                    commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat
-                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                    mollit
-                    anim id est laborum</p>
+            <div class="hero-container l-flex l-flex-col l-justify-center l-align-centertext-center l-m">
+                <p class="hero-p u-body-text l-flex l-align-center l-p l-mx-1">Welcome to Outback Nursery, your serene
+                    oasis of lush greenery in the heart of nature! Nestled in
+                    the tranquility of the countryside, our nursery offers a vast selection of vibrant plants, beautiful
+                    flowers, and hardy shrubs, each carefully cultivated to thrive in your garden. At Outback Nursery,
+                    we're more than just a plant store; we're a community of passionate gardeners dedicated to bringing
+                    the natural beauty of the outdoors into your home..</p>
 
-                <div class="l-flex l-flex-col l-justify-center l-align-center l-mt-1">
+                <div class="l-flex l-flex-col l-justify-center l-align-center l-mt-1 l-mx-1">
                     <a href="#" class="button l-p l-mb-1 u-font-bold">About Us</a>
                     <a href="#" class="button l-p l-mb-1 u-font-bold">Get In Touch</a>
                 </div>
@@ -68,13 +63,9 @@
                     <img class="card_image" src="./images/plant-image.webp" alt="Icon of a plant" />
                 </figure>
                 <h2 class="l-my-1 u-heading-1">Discover your perfect plant</h2>
-                <p class="u-body-text text-center white-overlay l-mb-1 l-p">Lorem ipsum dolor sit amet, consectetur
-                    adipiscing
-                    elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea
-                    commodo consequat.</p>
+                <p class="u-body-text text-center white-overlay l-mb-1 l-p">Ready to green up your space? Browse our
+                    diverse collection and discover the perfect plant that matches your style and space. Visit Outback
+                    Nursery today and let your gardening adventure begin!</p>
 
                 <div class="l-flex l-flex-col l-justify-center l-align-center">
                     <a href="#" class="button l-p u-font-bold">Explore Plants</a>
@@ -89,13 +80,9 @@
                     <img class="card_image" src="./images/products-mage.webp" alt="Icon of services" />
                 </figure>
                 <h2 class="l-my-1 u-heading-1">Our Other Products</h2>
-                <p class=" text-center  u-body-text white-overlay l-mb-1 l-p">Lorem ipsum dolor sit amet, consectetur
-                    adipiscing
-                    elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea
-                    commodo consequat.</p>
+                <p class=" text-center  u-body-text white-overlay l-mb-1 l-p">Explore More at Outback Nursery! Check out
+                    our range of gardening tools, decorative pots, and soil supplements to enhance your gardening
+                    experience. Dive into our other products today!</p>
 
                 <div class="l-flex l-flex-col l-justify-center l-align-center">
                     <a href="#" class="button l-p u-font-bold">Other Products</a>
@@ -117,13 +104,9 @@
                     <img class="card_image" src="./images/gift-card-image.webp" alt="Icon of a giftcard" />
                 </figure>
                 <h2 class="l-my-1 u-heading-1">Grab A Gift Card</h2>
-                <p class=" text-center white-overlay l-mb-1 l-p  u-body-text">Lorem ipsum dolor sit amet, consectetur
-                    adipiscing
-                    elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea
-                    commodo consequat.</p>
+                <p class=" text-center white-overlay l-mb-1 l-p  u-body-text">Give the Gift of Green! Surprise someone
+                    special by grabbing a gift card from Outback Nursery. Allow your loved ones the joy of choosing
+                    their perfect plant or essential garden accessory.</p>
 
                 <div class="l-flex l-flex-col l-justify-center l-align-center">
                     <a href="#" class="button l-p u-font-bold">Grab a giftcard</a>
@@ -139,13 +122,9 @@
                     <img class="card_image" src="./images/news-image.webp" alt="Icon of news" />
                 </figure>
                 <h2 class="l-my-1 u-heading-1">Social & News</h2>
-                <p class=" text-center white-overlay l-p l-mb-1  u-body-text">Lorem ipsum dolor sit amet, consectetur
-                    adipiscing
-                    elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea
-                    commodo consequat.</p>
+                <p class=" text-center white-overlay l-p l-mb-1  u-body-text">Stay Connected, Stay Informed! Follow
+                    Outback Nursery on social media and subscribe to our newsletter for the latest tips, trends, and
+                    exclusive offers. Join our community today!</p>
 
                 <div class="l-flex l-flex-col l-justify-center l-align-center">
                     <a href="#" class="button l-p u-font-bold">Stay Updated</a>
@@ -251,9 +230,11 @@
 
     <footer class="l-flex">
         <div>
-            <p class="u-body-text l-mb-1"><i class="fas fa-map-marker-alt l-px-1"></i>1234 Street Name, City, Country
+            <p class="u-body-text l-mb-1"><i class="fas fa-map-marker-alt l-px-1"></i>6016 Headquarters Rd
+                Courtenay,  British Columbia
+                V9J 1M7,  Canada
             </p>
-            <p class="u-body-text l-mb-1"><i class="fas fa-envelope l-px-1"></i>contact@example.com</p>
+            <p class="u-body-text l-mb-1"><i class="fas fa-envelope l-px-1"></i>info@outbacknursery.ca</p>
             <p class="u-body-text l-mb-1"><i class="fas fa-phone l-px-1"></i>+1 234 567 8900</p>
         </div>
 
