--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
 
     <!-- testimonial Section -->
 
-    <section class="u-bg-secondary l-flex l-flex-col l-justify-center l-align-center l-p">
+    <h2 class="u-bg-secondary u-text-white text-center u-hero-headline l-pt-1">Testimonials</h2>
+
+    <section class="u-bg-secondary l-flex l-flex-col l-justify-center l-align-center l-px-1">
         <div class="form-container-max l-flex l-flex-col l-py-1 l-flex-row-desktop l-w-100">
 
             <!-- Accordion Item 1 -->
