--- a/coming-soon.html
+++ b/coming-soon.html
@@ -32,23 +32,27 @@
 
     <!-- Hero Section -->
 
-    <section>
-        <h2 class="l-my-1 u-hero-headline">Coming soon</h2>
-    </section>
+    <div class="full-view l-flex l-flex-col l-p l-justify-center l-align-center">
+        
+        <div >
+            <h1 class="u-hero-headline u-text-primary">Coming Soon .....</h1>
+        </div>
+
+    </div>
 
     <!-- Footer Section -->
 
-    <footer class="l-flex ">
+    <footer class="l-flex">
         <div>
-            <h3>Address</h3>
-            <p>1234 Street Name, City, Country</p>
-            <h3>Email</h3>
-            <p>contact@example.com</p>
-            <h3>Phone</h3>
-            <p>+1 234 567 8900</p>
+            <p class="u-body-text l-mb-1"><i class="fas fa-map-marker-alt l-px-1"></i>6016 Headquarters Rd
+                Courtenay, British Columbia
+                V9J 1M7, Canada
+            </p>
+            <p class="u-body-text l-mb-1"><i class="fas fa-envelope l-px-1"></i>info@outbacknursery.ca</p>
+            <p class="u-body-text l-mb-1"><i class="fas fa-phone l-px-1"></i>+1 234 567 8900</p>
         </div>
 
-        <h4>© 2024 Outback Nursery. All rights reserved.</h4>
+        <h4 class="u-body-text u-font-bold l-m">© 2024 Outback Nursery. All rights reserved.</h4>
     </footer>
 
     <script src="./app.js"></script>
