Fix minor errors in design system

--- a/about-me.html
+++ b/about-me.html
@@ -24,7 +24,7 @@
         <i class="fas fa-bars"></i>
       </label>
       <ul class="u-text-primary nav-list u-bg-primary">
-        <li><a href="./about-me.html">about me</a></li>
+        <li><a class="active" href="./about-me.html">about me</a></li>
         <li><a href="./index.html">Demo Site</a></li>
 
         <div class="sidebar-mobile">
@@ -49,7 +49,7 @@
         <li><a href="./footer.html">Footer</a></li>
 
         <li><a href="./cards.html">Cards</a></li>
-        <li><a href="./footer.html">Forms</a></li>
+        <li><a href="./forms.html">Forms</a></li>
         <li><a href="./accordin.html">Accordion</a></li>
         <li><a href="./list.html">Lists</a></li>
 
@@ -94,7 +94,7 @@
     <h2 class="u-text-white u-heading l-mt-1">Components</h2>
     <ul>
       <li><a class="u-text-white u-body-text" href="cards.html">16 Cards</a></li>
-      <li><a class="u-text-white u-body-text" href="footer.html">17 Forms</a></li>
+      <li><a class="u-text-white u-body-text" href="forms.html">17 Forms</a></li>
       <li><a class="u-text-white u-body-text" href="accordin.html">18 Accordion</a></li>
       <li><a class="u-text-white u-body-text" href="list.html">19 Lists</a></li>
     </ul>
