--- a/colors.html
+++ b/colors.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>images</title>
+  <title>Colors</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./design-system.css">
   <script src="https://kit.fontawesome.com/df407aa6ef.js" crossorigin="anonymous"></script>
@@ -62,7 +62,7 @@
   <section class="sidebar-desktop">
     <h2 class="u-text-white u-heading">Branding</h2>
     <ul>
-      <li><a class="u-text-white u-body-text" href="colors.html">01 Colours</a></li>
+      <li><a class="u-text-white u-body-text active" href="colors.html">01 Colours</a></li>
       <li><a class="u-text-white u-body-text" href="typography.html">02 Typography</a></li>
       <li><a class="u-text-white u-body-text" href="logo.html">03 Logo</a></li>
     </ul>
@@ -94,7 +94,7 @@
     <h2 class="u-text-white u-heading l-mt-1">Components</h2>
     <ul>
       <li><a class="u-text-white u-body-text" href="cards.html">16 Cards</a></li>
-      <li><a class="u-text-white u-body-text" href="footer.html">17 Forms</a></li>
+      <li><a class="u-text-white u-body-text" href="forms.html">17 Forms</a></li>
       <li><a class="u-text-white u-body-text" href="accordin.html">18 Accordion</a></li>
       <li><a class="u-text-white u-body-text" href="list.html">19 Lists</a></li>
     </ul>
@@ -107,115 +107,100 @@
 
       <!-- Background Colors -->
       <div class="c-card l-p l-m u-bg-white ">
-        <h2>Background</h2>
+        <h2 class="u-heading-1">Background</h2>
         <div class="c-card l-m u-bg-primary u-text-primary l-p">
-          <p>Primary Background</p>
-          <p>Class name : .u-bg-primary</p>
-          <p>Hex Code: #faeee7</p>
-          <p>Uses: Backgrounds</p>
+          <p class="u-body-text ">Primary Background</p>
+          <p class="u-body-text ">Class name : .u-bg-primary</p>
+          <p class="u-body-text ">Hex Code: #faeee7</p>
+          <p class="u-body-text ">Uses: Backgrounds</p>
         </div>
 
-        <div class="c-card l-m u-bg-secondary u-text-primary l-p">
-          <p>Secondary Background</p>
-          <p>Class name : .u-bg-secondary</p>
-          <p>Hex Code: #c3f0ca</p>
-          <p>Uses: Navbar and sides</p>
+        <div class="c-card l-m u-bg-secondary u-text-white l-p">
+          <p class="u-body-text ">Secondary Background</p>
+          <p class="u-body-text ">Class name : .u-bg-secondary</p>
+          <p class="u-body-text ">Hex Code: #c3f0ca</p>
+          <p class="u-body-text ">Uses: Navbar and sides</p>
         </div>
 
-        <div class="c-card l-m u-bg-white u-text-primary l-p">
-          <p>White Background</p>
-          <p>Class name : .u-bg-white</p>
-          <p>Hex Code: #fffffe</p>
-          <p>Uses: Background Highlights</p>
-        </div>
 
       </div>
 
       <!-- Font Colors -->
       <div class="c-card l-m l-p ">
-        <h2>Texts</h2>
+        <h2 class="u-heading-1">Texts</h2>
         <div class="c-card l-m u-bg-primary u-text-primary l-p">
-          <p>Primary Text</p>
-          <p>Class name : .u-text-primary</p>
-          <p>Hex Code: #594a4e</p>
-          <p>Uses: Paragraphs</p>
+          <p class="u-body-text ">Primary Text</p>
+          <p class="u-body-text ">Class name : .u-text-primary</p>
+          <p class="u-body-text ">Hex Code: #594a4e</p>
+          <p class="u-body-text ">Uses: Paragraphs</p>
         </div>
 
-        <div class="c-card l-m u-bg-primary u-text-secondary l-p">
-          <p>Secondary Text</p>
-          <p>Class name : .u-text-secondary</p>
-          <p>Hex Code: #33272a</p>
-          <p>Uses: Headings and button text</p>
+        <div class="c-card l-m u-bg-secondary u-text-white l-p">
+          <p class="u-body-text ">Secondary Text</p>
+          <p class="u-body-text ">Class name : .u-text-secondary</p>
+          <p class="u-body-text ">Hex Code: #33272a</p>
+          <p class="u-body-text ">Uses: Headings and button text</p>
         </div>
       </div>
 
       <!-- Accent Colors -->
       <div class="c-card l-m l-p">
-        <h2>Accent</h2>
+        <h2 class="u-heading-1">Accent</h2>
         <div class="c-card l-m u-accent u-text-secondary l-p">
-          <p>Primary Background</p>
-          <p>Class name : .u-accent</p>
-          <p>Hex Code: #ff8ba7</p>
-          <p>Uses: Headings and button text</p>
+          <p class="u-body-text ">Primary Background</p>
+          <p class="u-body-text ">Class name : .u-accent</p>
+          <p class="u-body-text ">Hex Code: #ff8ba7</p>
+          <p class="u-body-text ">Uses: Headings and button text</p>
         </div>
 
-        <div class="c-card l-m u-accent-light u-text-secondary  l-p">
-          <p>Primary Background</p>
-          <p>Class name : .u-accent-light</p>
-          <p>Hex Code: #ffc6c7</p>
-          <p>Uses: Headings and button text</p>
+        <div class="c-card l-m u-accent-light u-text-black l-p">
+          <p class="u-body-text ">Primary Background</p>
+          <p class="u-body-text ">Class name : .u-accent-light</p>
+          <p class="u-body-text ">Hex Code: #ffc6c7</p>
+          <p class="u-body-text ">Uses: Headings and button text</p>
+        </div>
+
+        <div class="c-card l-m u-accent-dark u-text-white  l-p">
+          <p class="u-body-text ">Primary Background</p>
+          <p class="u-body-text ">Class name : .u-accent-light</p>
+          <p class="u-body-text ">Hex Code: #ffc6c7</p>
+          <p class="u-body-text ">Uses: Headings and button text</p>
         </div>
       </div>
 
       <!-- Color Contrast -->
       <div class="c-card l-m  l-p">
-        <h2>Color Contrast</h2>
+        <h2 class="u-heading-1">Color Contrast</h2>
         <div class="c-card l-m u-bg-primary u-text-primary l-p">
-          <p>Primary Background</p>
-          <p>Primary text</p>
-          <p>Contrast Ratio : 7.33:1 Pass </p>
+          <p class="u-body-text ">Primary Background</p>
+          <p class="u-body-text ">Primary text</p>
+          <p class="u-body-text ">Contrast Ratio : 7.33:1 Pass </p>
         </div>
 
-        <div class="c-card l-m u-bg-secondary u-text-primary l-p">
-          <p>Secondary Background</p>
-          <p>Primary text</p>
-          <p>Contrast Ratio : 6.61:1 Pass </p>
+        <div class="c-card l-m u-bg-secondary u-text-white l-p">
+          <p class="u-body-text ">Secondary Background</p>
+          <p class="u-body-text ">Primary text</p>
+          <p class="u-body-text ">Contrast Ratio : 6.61:1 Pass </p>
         </div>
 
-        <div class="c-card l-m u-bg-primary u-text-secondary l-p">
-          <p>Primary Background</p>
-          <p>Secondary text</p>
-          <p>Contrast Ratio : 12.59:1 Pass </p>
-        </div>
-
-        <div class="c-card l-m u-bg-secondary u-text-secondary l-p">
-          <p>Secondary Background</p>
-          <p>Secondary text</p>
-          <p>Contrast Ratio : 11.36:1 Pass </p>
-        </div>
-
-        <div class="c-card l-m u-bg-white u-text-primary l-p">
-          <p>White Background</p>
-          <p>Primary text</p>
-          <p>Contrast Ratio : 8.34:1 Pass </p>
-        </div>
-
-        <div class="c-card l-m u-bg-white u-text-secondary l-p">
-          <p>White Background</p>
-          <p>Secondary text</p>
-          <p>Contrast Ratio : 14.33:1 Pass </p>
-        </div>
 
         <div class="c-card l-m u-accent u-text-secondary l-p">
-          <p>Accent Background</p>
-          <p>Secondary text</p>
-          <p>Contrast Ratio : 6.48:1 </p>
+          <p class="u-body-text ">Accent Background</p>
+          <p class="u-body-text ">Secondary text</p>
+          <p class="u-body-text ">Contrast Ratio : 6.48:1 </p>
         </div>
 
-        <div class="c-card l-m u-accent-light u-text-secondary l-p">
-          <p>Accent Light Background</p>
-          <p>Secondary text</p>
-          <p>Contrast Ratio : 9.66:1 </p>
+
+        <div class="c-card l-m u-accent-light u-text-white l-p">
+          <p class="u-body-text ">Accent Light Background</p>
+          <p class="u-body-text ">Secondary text</p>
+          <p class="u-body-text ">Contrast Ratio : 9.66:1 </p>
+        </div>
+
+        <div class="c-card l-m u-accent-dark u-text-white l-p">
+          <p class="u-body-text ">Accent Light Background</p>
+          <p class="u-body-text ">Secondary text</p>
+          <p class="u-body-text ">Contrast Ratio : 9.66:1 </p>
         </div>
 
       </div>
