--- a/typography.html
+++ b/typography.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>images</title>
+  <title>Typography</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./design-system.css">
   <script src="https://kit.fontawesome.com/df407aa6ef.js" crossorigin="anonymous"></script>
@@ -63,7 +63,7 @@
     <h2 class="u-text-white u-heading">Branding</h2>
     <ul>
       <li><a class="u-text-white u-body-text" href="colors.html">01 Colours</a></li>
-      <li><a class="u-text-white u-body-text" href="typography.html">02 Typography</a></li>
+      <li><a class="u-text-white u-body-text active" href="typography.html">02 Typography</a></li>
       <li><a class="u-text-white u-body-text" href="logo.html">03 Logo</a></li>
     </ul>
 
