--- a/cards.html
+++ b/cards.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>images</title>
+  <title>Cards</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./design-system.css">
   <script src="https://kit.fontawesome.com/df407aa6ef.js" crossorigin="anonymous"></script>
@@ -93,7 +93,7 @@
 
     <h2 class="u-text-white u-heading l-mt-1">Components</h2>
     <ul>
-      <li><a class="u-text-white u-body-text" href="cards.html">16 Cards</a></li>
+      <li><a class="u-text-white u-body-text active" href="cards.html">16 Cards</a></li>
       <li><a class="u-text-white u-body-text" href="footer.html">17 Forms</a></li>
       <li><a class="u-text-white u-body-text" href="accordin.html">18 Accordion</a></li>
       <li><a class="u-text-white u-body-text" href="list.html">19 Lists</a></li>
