--- a/design-system.html
+++ b/design-system.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>images</title>
+  <title>Design System</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./design-system.css">
   <script src="https://kit.fontawesome.com/df407aa6ef.js" crossorigin="anonymous"></script>
