--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>images</title>
+  <title>Footer</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./design-system.css">
   <script src="https://kit.fontawesome.com/df407aa6ef.js" crossorigin="anonymous"></script>
@@ -88,7 +88,7 @@
       <li><a class="u-text-white u-body-text" href="hero.html">12 Hero</a></li>
       <li><a class="u-text-white u-body-text" href="carousel.html">13 Carousel</a></li>
       <li><a class="u-text-white u-body-text" href="#">14 Slats</a></li>
-      <li><a class="u-text-white u-body-text" href="footer.html">15 Footer</a></li>
+      <li><a class="u-text-white u-body-text active" href="footer.html">15 Footer</a></li>
     </ul>
 
     <h2 class="u-text-white u-heading l-mt-1">Components</h2>
