--- a/hero.html
+++ b/hero.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>images</title>
+  <title>Hero</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./design-system.css">
   <script src="https://kit.fontawesome.com/df407aa6ef.js" crossorigin="anonymous"></script>
@@ -85,7 +85,7 @@
 
     <h2 class="u-text-white u-heading l-mt-1">Blocks</h2>
     <ul>
-      <li><a class="u-text-white u-body-text" href="hero.html">12 Hero</a></li>
+      <li><a class="u-text-white u-body-text active" href="hero.html">12 Hero</a></li>
       <li><a class="u-text-white u-body-text" href="carousel.html">13 Carousel</a></li>
       <li><a class="u-text-white u-body-text" href="#">14 Slats</a></li>
       <li><a class="u-text-white u-body-text" href="footer.html">15 Footer</a></li>
@@ -102,9 +102,27 @@
 
 
 
-  <!-- Spacing properties -->
+  <!-- Hero Section -->
   <div class="design-system-content u-bg-white max-width-desktop">
+    <section class="hero-bg l-flex l-justify-center l-align-center l-p">
+      <div
+          class="hero-overlay white-overlay c-card-hero l-flex l-flex-col l-justify-center l-align-center l-p text-center  l-m">
+          <h1 class="l-mt-1 u-heading u-hero-headline">Welcome To Outback Nursery</h1>
+          <div class="hero-container l-flex l-flex-col l-justify-center l-align-centertext-center l-mx-1">
+              <p class="hero-p u-body-text l-flex l-align-center l-mt-1">Welcome to Outback Nursery, your serene
+                  oasis of lush greenery in the heart of nature! Nestled in
+                  the tranquility of the countryside, our nursery offers a vast selection of vibrant plants, beautiful
+                  flowers, and hardy shrubs, each carefully cultivated to thrive in your garden. At Outback Nursery,
+                  we're more than just a plant store; we're a community of passionate gardeners dedicated to bringing
+                  the natural beauty of the outdoors into your home..</p>
 
+              <div class="l-flex l-flex-col l-justify-center l-align-center l-mt-1">
+                  <a href="#products-services" class="button l-p l-mb-1 u-font-bold">Our Products</a>
+                  <a href="#get-in-touch" class="button l-p l-mb-1 u-font-bold">Get In Touch</a>
+              </div>
+          </div>
+      </div>
+  </section>
   </div>
 
   <script src="./design-system.js"></script>
