--- a/images.html
+++ b/images.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>images</title>
+  <title>Images</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./design-system.css">
   <script src="https://kit.fontawesome.com/df407aa6ef.js" crossorigin="anonymous"></script>
@@ -71,7 +71,7 @@
     <ul >
       <li><a class="u-text-white u-body-text" href="spacing.html">04 Spacing</a></li>
       <li><a class="u-text-white u-body-text" href="containers.html">05 Containers</a></li>
-      <li><a class="u-text-white u-body-text" href="images.html">06 Images</a></li>
+      <li><a class="u-text-white u-body-text active" href="images.html">06 Images</a></li>
       <li><a class="u-text-white u-body-text" href="#">07 Interactive</a></li>
       <li><a class="u-text-white u-body-text" href="#">08 Pages</a></li>
     </ul>
