--- a/list.html
+++ b/list.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>images</title>
+  <title>List</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./design-system.css">
   <script src="https://kit.fontawesome.com/df407aa6ef.js" crossorigin="anonymous"></script>
@@ -96,7 +96,7 @@
       <li><a class="u-text-white u-body-text" href="cards.html">16 Cards</a></li>
       <li><a class="u-text-white u-body-text" href="footer.html">17 Forms</a></li>
       <li><a class="u-text-white u-body-text" href="accordin.html">18 Accordion</a></li>
-      <li><a class="u-text-white u-body-text" href="list.html">19 Lists</a></li>
+      <li><a class="u-text-white u-body-text active" href="list.html">19 Lists</a></li>
     </ul>
   </section>
 
