--- a/spacing.html
+++ b/spacing.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>images</title>
+  <title>Spacing</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./design-system.css">
   <script src="https://kit.fontawesome.com/df407aa6ef.js" crossorigin="anonymous"></script>
@@ -69,7 +69,7 @@
 
     <h2 class="u-text-white u-heading l-mt-1">Utilities</h2>
     <ul >
-      <li><a class="u-text-white u-body-text" href="spacing.html">04 Spacing</a></li>
+      <li><a class="u-text-white u-body-text active" href="spacing.html">04 Spacing</a></li>
       <li><a class="u-text-white u-body-text" href="containers.html">05 Containers</a></li>
       <li><a class="u-text-white u-body-text" href="images.html">06 Images</a></li>
       <li><a class="u-text-white u-body-text" href="#">07 Interactive</a></li>
