Add card images

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <section class="explore-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
             <figure class="card__image-container">
-                <img class="card_image" src="https://images.unsplash.com/photo-1494253109108-2e30c049369b?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYyNDcwMTUwOQ&ixlib=rb-1.2.1&q=85" alt="An orange painted blue, cut in half laying on a blue background" />
+                <img class="card_image" src="./images/plant-image.webp" alt="Icon of a plant" />
             </figure>
             <h2 class="l-my-1">Discover your perfect plant</h2>
             <p class=" text-center white-overlay">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -78,7 +78,7 @@
 
         <section class="products-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
             <figure class="card__image-container">
-                <img class="card_image" src="https://images.unsplash.com/photo-1494253109108-2e30c049369b?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYyNDcwMTUwOQ&ixlib=rb-1.2.1&q=85" alt="An orange painted blue, cut in half laying on a blue background" />
+                <img class="card_image" src="./images/products-mage.webp" alt="Icon of services" />
             </figure>
             <h2 class="l-my-1">Our Other Products</h2>
             <p class=" text-center white-overlay">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -99,7 +99,7 @@
 
         <section class="giftcard-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
             <figure class="card__image-container">
-                <img class="card_image" src="https://images.unsplash.com/photo-1494253109108-2e30c049369b?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYyNDcwMTUwOQ&ixlib=rb-1.2.1&q=85" alt="An orange painted blue, cut in half laying on a blue background" />
+                <img class="card_image" src="./images/gift-card-image.webp" alt="Icon of a giftcard" />
             </figure>
             <h2 class="l-my-1">Grab A Gift Card</h2>
             <p class=" text-center white-overlay">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -118,7 +118,7 @@
         <section class="social-bg c-card l-flex l-flex-col l-justify-center l-align-center l-p l-m">
             
             <figure class="card__image-container">
-                <img class="card_image" src="https://images.unsplash.com/photo-1494253109108-2e30c049369b?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYyNDcwMTUwOQ&ixlib=rb-1.2.1&q=85" alt="An orange painted blue, cut in half laying on a blue background" />
+                <img class="card_image"  src="./images/news-image.webp" alt="Icon of news" />
             </figure>
             <h2 class="l-my-1">Social & News</h2>
             <p class=" text-center white-overlay">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
