Update container styles

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </section>
 
-    <div class="section-combo">
+    <div class="u-bg-secondary section-combo">
 
         <!-- Explore Section -->
 
@@ -93,7 +93,7 @@
     </div>
 
 
-    <div class="section-combo">
+    <div class="u-bg-secondary section-combo">
 
         <!-- Gift Card Section -->
 
@@ -135,7 +135,7 @@
 
     <!-- Get in touch form-->
 
-    <section class="u-bg-primary l-p">
+    <section class="u-bg-secondary u-bg-primary l-p">
         <div class="form-container c-card l-flex l-flex-col l-justify-center l-align-center l-p contact-bg">
             <h2 class="l-my-1">Get In Touch</h2>
 
@@ -155,7 +155,7 @@
 
     <!-- testimonial Section -->
 
-    <section class="l-flex l-flex-col l-justify-center l-align-center l-p l-m">
+    <section class="u-bg-secondary l-flex l-flex-col l-justify-center l-align-center l-p">
         <div class="form-container l-flex l-flex-col l-py-1 l-flex-row-desktop">
 
             <!-- Accordion Item 1 -->
@@ -214,18 +214,18 @@
 
     <!-- Footer Section -->
 
-    <footer class="l-flex ">
+    <footer class="l-flex">
         <div>
-            <h3>Address</h3>
+            <h3><i class="fas fa-map-marker-alt"></i> Address</h3>
             <p>1234 Street Name, City, Country</p>
-            <h3>Email</h3>
+            <h3><i class="fas fa-envelope"></i> Email</h3>
             <p>contact@example.com</p>
-            <h3>Phone</h3>
+            <h3><i class="fas fa-phone"></i> Phone</h3>
             <p>+1 234 567 8900</p>
         </div>
-
+    
         <h4>© 2024 Outback Nursery. All rights reserved.</h4>
-    </footer>
+    </footer>    
 
     <script src="./app.js"></script>
 
