--- a/coming-soon.html
+++ b/coming-soon.html
@@ -22,10 +22,10 @@
                 <i class="fas fa-bars"></i>
             </label>
             <ul class="u-text-primary nav-list u-bg-primary">
-                <li><a href="/coming-soon.html">about us</a></li>
-                <li><a href="/coming-soon.html">plants</a></li>
-                <li><a href="/coming-soon.html">additional products</a></li>
-                <li><a href="/coming-soon.html">social & news</a></li>
+                <li><a href="coming-soon.html">about us</a></li>
+                <li><a href="coming-soon.html">plants</a></li>
+                <li><a href="coming-soon.html">additional products</a></li>
+                <li><a href="coming-soon.html">social & news</a></li>
             </ul>
         </nav>
     </header>
